2012-01-24  Alexis Menard  <alexis.menard@openbossa.org>

        Unreviewed build fix for Qt.

        * WebProcess/WebPage/qt/LayerTreeHostQt.cpp:
        (WebKit::LayerTreeHostQt::showDebugBorders):
        (WebKit::LayerTreeHostQt::showRepaintCounter):

2012-01-23  Simon Fraser  <simon.fraser@apple.com>

        Show layer borders for scrollbar layers
        https://bugs.webkit.org/show_bug.cgi?id=76888

        Reviewed by Beth Dakin.
        
        Update for new signatures of GraphicsLayerClient::showDebugBorders()
        and GraphicsLayerClient::showRepaintCounter().

        * UIProcess/LayerTreeHostProxy.h:
        (WebKit::LayerTreeHostProxy::showDebugBorders):
        (WebKit::LayerTreeHostProxy::showRepaintCounter):
        * WebProcess/WebPage/ca/LayerTreeHostCA.cpp:
        (WebKit::LayerTreeHostCA::showDebugBorders):
        (WebKit::LayerTreeHostCA::showRepaintCounter):
        * WebProcess/WebPage/ca/LayerTreeHostCA.h:
        * WebProcess/WebPage/qt/LayerTreeHostQt.h:

2012-01-24  David Levin  <levin@chromium.org>

        [windows] Convert usage of GetDC to HWndDC Part 3.
        https://bugs.webkit.org/show_bug.cgi?id=76889

        Reviewed by Adam Roben.

        * UIProcess/win/WebPopupMenuProxyWin.cpp:
        (WebKit::WebPopupMenuProxyWin::paint): Fix a dc leak and use the dellayed allocation.

2012-01-24  Sergio Villar Senin  <svillar@igalia.com>

        [WK2] [GTK] TestDownloads hitting an assertion in Debug builds
        https://bugs.webkit.org/show_bug.cgi?id=76915

        Reviewed by Martin Robinson.

        No new tests required as it fixes some assertions in a unit test.

        * WebProcess/Downloads/soup/DownloadSoup.cpp:
        (WebKit::Download::start):
        (WebKit::Download::startWithHandle):

2012-01-24  No'am Rosenthal  <noam.rosenthal@nokia.com>

        [Qt][WK2] Qt's cross-process AC copies images excessively when updating tiles.
        https://bugs.webkit.org/show_bug.cgi?id=76877
